--- a/app/src/main/res/layout/fragment_player_creation.xml
+++ b/app/src/main/res/layout/fragment_player_creation.xml
@@ -3,11 +3,84 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.player.playerCreation.PlayerCreationFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.player.playerSelection.PlayerSelectionFragment">
 
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbarCreation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/primary"
+            android:outlineAmbientShadowColor="@color/primary"
+            android:outlineSpotShadowColor="@color/primary"
+            app:title="@string/player_creation_title"
+            android:elevation="@dimen/main_toolbar_elevation"
+            android:theme="@style/AppTheme.AppBarOverlay"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            tools:ignore="MissingConstraints"/>
+
+        <LinearLayout
+            android:id="@+id/infoPlayerCreation"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/main_header_height"
+            android:background="@color/primary"
+            android:paddingTop="@dimen/dashboard_card_image_size"
+            app:layout_constraintTop_toTopOf="@id/toolbarCreation"
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/imgPlayerCreation"
+                android:layout_width="@dimen/avatar_card_width"
+                android:layout_height="@dimen/avatar_card_height"
+                android:layout_gravity="center"
+                android:src="@drawable/logo"/>
+            <EditText
+                android:id="@+id/txtPlayerCreation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/main_margin_2x"
+                android:layout_marginRight="@dimen/main_margin_2x"
+
+                android:hint="@string/hint_nickname"
+                android:focusedByDefault="true"
+
+                android:textColorHint="@color/white"
+                android:textColor="@color/white"
+
+                android:textAlignment="center"
+                android:textSize="@dimen/main_textSize_4x"/>
+        </LinearLayout>
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/lstAvatar"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/infoPlayerCreation"
+
+            android:splitMotionEvents="false"
+            tools:listitem="@layout/avatar_item"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabSaveUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+
+        android:layout_marginRight="@dimen/main_margin_2x"
+        android:layout_marginBottom="@dimen/main_margin_2x"
+
+        android:tint="@color/white"
+        app:srcCompat="@drawable/ic_save_black_24dp"
+        android:backgroundTint="@color/accent"/>
 
 </FrameLayout>
