--- a/app/src/main/res/layout/fragment_player_selection.xml
+++ b/app/src/main/res/layout/fragment_player_selection.xml
@@ -24,7 +24,7 @@
             tools:ignore="MissingConstraints"/>
 
         <LinearLayout
-            android:id="@+id/infoPlayerDashboard"
+            android:id="@+id/infoPlayerSelection"
             android:layout_width="match_parent"
             android:layout_height="@dimen/main_header_height"
             android:background="@color/primary"
@@ -32,12 +32,12 @@
             app:layout_constraintTop_toTopOf="@id/toolbarSelection"
             android:orientation="vertical">
             <ImageView
-                android:id="@+id/imgPlayerDash"
+                android:id="@+id/imgPlayerSelect"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:src="@drawable/logo"/>
             <TextView
-                android:id="@+id/namePlayerDash"
+                android:id="@+id/namePlayerSelect"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
@@ -55,7 +55,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/infoPlayerDashboard"
+        app:layout_constraintTop_toBottomOf="@id/infoPlayerSelection"
 
         tools:listitem="@layout/player_item"/>
 
@@ -72,7 +72,7 @@
             app:tint="@color/playerOption"
             android:src="@drawable/ic_player_add_black_24dp"
 
-            app:layout_constraintTop_toBottomOf="@id/infoPlayerDashboard"
+            app:layout_constraintTop_toBottomOf="@id/infoPlayerSelection"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
