--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,5 +34,7 @@
     <dimen name="height_btnFinish">50dp</dimen>
     <dimen name="assistant_desc_width">300dp</dimen>
     <dimen name="assistant_desc_height">230dp</dimen>
+    <dimen name="avatar_card_width">110dp</dimen>
+    <dimen name="avatar_card_height">80dp</dimen>
 
 </resources>
