--- a/app/src/main/res/layout/fragment_player_selection.xml
+++ b/app/src/main/res/layout/fragment_player_selection.xml
@@ -33,8 +33,9 @@
             android:orientation="vertical">
             <ImageView
                 android:id="@+id/imgPlayerSelect"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/avatar_card_width"
+                android:layout_height="@dimen/avatar_card_height"
+                android:layout_gravity="center"
                 android:src="@drawable/logo"/>
             <TextView
                 android:id="@+id/namePlayerSelect"
