--- a/app/src/main/res/layout/player_item.xml
+++ b/app/src/main/res/layout/player_item.xml
@@ -3,26 +3,52 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/itemAvatarlst"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="@dimen/avatar_card_width_2"
+    android:layout_height="@dimen/avatar_card_height"
+    android:layout_marginLeft="@dimen/main_margin_2x"
     android:animateLayoutChanges="true">
-<!--
+
     <androidx.cardview.widget.CardView
-        android:layout_width=""
-        android:layout_height="@dimen/dashboard_card_image_size"
+        android:id="@+id/avatarCard"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
 
-    <ImageView
-        android:id="@+id/avatar_selected"
-        android:src="@drawable/avatar_01_mexican"
-        android:layout_width="@dimen/player_selection_item_imgAvatar_size"
-        android:layout_height="@dimen/player_selection_item_imgAvatar_size"/>
+        app:cardUseCompatPadding="true"
+        app:cardCornerRadius="@dimen/main_card_cornerRadius"
+        app:cardElevation="@dimen/cardview_default_elevation"
 
-    <TextView
-        android:id="@+id/lblAvatar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:text="Completado el 21/07/2019 a las 15:32" />
--->
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent">
+
+        <ImageView
+            android:id="@+id/imgAvatar"
+            android:layout_width="@dimen/player_selection_item_imgAvatar_size"
+            android:layout_height="@dimen/player_selection_item_imgAvatar_size"
+            android:layout_marginLeft="@dimen/main_margin_2x"
+            android:layout_marginRight="@dimen/main_margin_1x"
+            android:layout_gravity="left"
+            android:layout_marginTop="@dimen/main_margin_2x"
+            android:src="@drawable/avatar_01_mexican"/>
+
+        <TextView
+            android:id="@+id/usernamePlayer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="@dimen/main_textSize_1x"
+            android:layout_marginRight="@dimen/main_margin_2x"
+            android:textAlignment="viewEnd"
+            android:gravity="center_vertical"
+            android:text="@string/player_selection_title"
+            tools:ignore="RtlCompat" />
+        <View
+            android:id="@+id/avatarCheck"
+            android:layout_width="@dimen/avatar_card_width_2"
+            android:layout_height="@dimen/main_margin_half"
+            android:layout_gravity="bottom"
+            android:background="@color/primaryDark"
+            android:visibility="invisible"/>
+    </androidx.cardview.widget.CardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
