--- a/app/src/main/res/layout/fragment_player_edition.xml
+++ b/app/src/main/res/layout/fragment_player_edition.xml
@@ -11,35 +11,34 @@
         android:layout_height="match_parent">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbarCreation"
+            android:id="@+id/toolbarEdition"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/primary"
             android:outlineAmbientShadowColor="@color/primary"
             android:outlineSpotShadowColor="@color/primary"
-            app:title="@string/player_creation_title"
+            app:title="@string/player_edition_title"
             android:elevation="@dimen/main_toolbar_elevation"
             android:theme="@style/AppTheme.AppBarOverlay"
             app:popupTheme="@style/AppTheme.PopupOverlay"
             tools:ignore="MissingConstraints"/>
 
         <LinearLayout
-            android:id="@+id/infoPlayerCreation"
+            android:id="@+id/infoPlayerEdition"
             android:layout_width="match_parent"
             android:layout_height="@dimen/main_header_height"
             android:background="@color/primary"
             android:paddingTop="@dimen/dashboard_card_image_size"
-            app:layout_constraintTop_toTopOf="@id/toolbarCreation"
+            app:layout_constraintTop_toTopOf="@id/toolbarEdition"
             android:orientation="vertical">
-
             <ImageView
-                android:id="@+id/imgPlayerCreation"
+                android:id="@+id/imgPlayerEdition"
                 android:layout_width="@dimen/avatar_card_width"
                 android:layout_height="@dimen/avatar_card_height"
                 android:layout_gravity="center"
                 android:src="@drawable/logo"/>
             <EditText
-                android:id="@+id/txtPlayerCreation"
+                android:id="@+id/txtPlayerEdition"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/main_margin_2x"
@@ -64,7 +63,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/infoPlayerCreation"
+            app:layout_constraintTop_toBottomOf="@id/infoPlayerEdition"
 
             android:splitMotionEvents="false"
             tools:listitem="@layout/avatar_item"/>
