--- a/app/src/main/res/layout/fragment_player_selection.xml
+++ b/app/src/main/res/layout/fragment_player_selection.xml
@@ -23,29 +23,64 @@
             app:popupTheme="@style/AppTheme.PopupOverlay"
             tools:ignore="MissingConstraints"/>
 
-        <LinearLayout
+        <View
             android:id="@+id/infoPlayerSelection"
             android:layout_width="match_parent"
             android:layout_height="@dimen/main_header_height"
             android:background="@color/primary"
             android:paddingTop="@dimen/dashboard_card_image_size"
             app:layout_constraintTop_toTopOf="@id/toolbarSelection"
-            android:orientation="vertical">
-            <ImageView
-                android:id="@+id/imgPlayerSelect"
-                android:layout_width="@dimen/avatar_card_width"
-                android:layout_height="@dimen/avatar_card_height"
-                android:layout_gravity="center"
-                android:src="@drawable/logo"/>
-            <TextView
-                android:id="@+id/namePlayerSelect"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textAlignment="center"
-                android:textSize="@dimen/main_textSize_4x"
-                android:text="@string/player_selection_no_player_selected"/>
-        </LinearLayout>
+            android:orientation="vertical" />
+        <ImageView
+            android:id="@+id/btnEdit"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+
+            android:layout_marginTop="@dimen/main_margin_3x"
+            android:src="@drawable/ic_player_edition_black_24dp"
+            android:tint="@color/white"
+
+            android:visibility="invisible"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbarSelection"/>
+        <TextView
+            android:id="@+id/btnTextEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/main_textSize_2x"
+            android:text="@string/player_selection_btnEdit"
+            android:textColor="@color/white"
+
+            android:visibility="invisible"
+            android:layout_marginTop="@dimen/main_margin_3x"
+            app:layout_constraintLeft_toRightOf="@id/btnEdit"
+            app:layout_constraintTop_toBottomOf="@id/toolbarSelection"/>
+
+        <ImageView
+            android:id="@+id/imgPlayerSelect"
+            android:layout_width="@dimen/avatar_card_width"
+            android:layout_height="@dimen/avatar_card_height"
+            android:layout_gravity="center"
+            android:src="@drawable/logo"
+            android:layout_marginTop="@dimen/main_margin_3x"
+            android:paddingRight="@dimen/main_margin_2x"
+            android:layout_marginRight="@dimen/main_margin_4x"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/btnTextEdit"
+            app:layout_constraintTop_toBottomOf="@id/toolbarSelection"/>
+        <TextView
+            android:id="@+id/namePlayerSelect"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:textSize="@dimen/main_textSize_4x"
+            android:text="@string/player_selection_no_player_selected"
+
+            app:layout_constraintTop_toBottomOf="@id/imgPlayerSelect"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent" />
 
 
     <androidx.recyclerview.widget.RecyclerView
