--- a/app/src/main/res/menu/menu_delete.xml
+++ b/app/src/main/res/menu/menu_delete.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu   xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/btnDeleteMenu"
+        android:icon="@drawable/ic_delete_black_24dp"
+        android:title="@string/help_title"
+        app:iconTint="@color/white"
+        app:showAsAction="ifRoom"/>
     <item android:id="@+id/btnInfoMenu"
         android:icon="@drawable/ic_help_black_24dp"
         android:title="@string/help_title"
