Layout Result creado

--- a/app/src/main/res/navigation/main_activity.xml
+++ b/app/src/main/res/navigation/main_activity.xml
@@ -42,11 +42,7 @@
         android:id="@+id/rankingFragment"
         android:name="es.iessaladillo.pedrojoya.stroop.ui.ranking.RankingFragment"
         android:label="@string/ranking_title"
-        tools:layout="@layout/fragment_ranking" >
-        <action
-            android:id="@+id/action_rankingFragment_to_resultFragment"
-            app:destination="@id/resultFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_ranking" />
     <fragment
         android:id="@+id/playerSelectionFragment"
         android:name="es.iessaladillo.pedrojoya.stroop.ui.player.playerSelection.PlayerSelectionFragment"
@@ -72,14 +68,10 @@
         android:id="@+id/gameFragment"
         android:name="es.iessaladillo.pedrojoya.stroop.ui.game.GameFragment"
         android:label="fragment_game"
-        tools:layout="@layout/fragment_game" >
-        <action
-            android:id="@+id/action_gameFragment_to_resultFragment"
-            app:destination="@id/resultFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_game" />
     <fragment
         android:id="@+id/resultFragment"
-        android:name="es.iessaladillo.pedrojoya.stroop.ResultFragment"
+        android:name="es.iessaladillo.pedrojoya.stroop.ui.result.ResultFragment"
         android:label="Result"
         tools:layout="@layout/fragment_result" />
     <fragment
