--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -3,12 +3,159 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ResultFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.result.ResultFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbarResult"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/primary"
+            android:outlineAmbientShadowColor="@color/primary"
+            android:outlineSpotShadowColor="@color/primary"
+            app:title="@string/game_result_title"
+            android:elevation="@dimen/main_toolbar_elevation"
+            android:theme="@style/AppTheme.AppBarOverlay"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            tools:ignore="MissingConstraints"/>
+
+        <View
+            android:id="@+id/infoPlayer"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/main_header_height"
+            android:background="@color/primary"
+            android:paddingTop="@dimen/dashboard_card_image_size"
+            app:layout_constraintTop_toTopOf="@id/toolbarResult"
+            android:orientation="vertical" />
+
+        <ImageView
+            android:id="@+id/imgPlayer"
+            android:layout_width="@dimen/avatar_card_width"
+            android:layout_height="@dimen/avatar_card_height"
+            android:layout_gravity="center"
+            android:src="@drawable/logo"
+            android:layout_marginTop="@dimen/main_margin_3x"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/toolbarResult"/>
+        <TextView
+            android:id="@+id/namePlayer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:textSize="@dimen/main_textSize_4x"
+            android:text="@string/player_selection_no_player_selected"
+
+            app:layout_constraintTop_toBottomOf="@id/imgPlayer"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent" />
+
+        <TextView
+            android:id="@+id/titleResult"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/main_margin_3x"
+
+            android:text="@string/game_result_title"
+            android:textColor="@color/accent"
+            android:textAlignment="center"
+            android:textSize="@dimen/main_textSize_5x"
+            android:textStyle="bold"
+
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/infoPlayer"/>
+
+        <TextView
+            android:id="@+id/titleCorrect"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/main_margin_3x"
+
+            android:text="@string/game_result_lblCorrectLabel"
+            android:textAlignment="center"
+            android:textSize="@dimen/main_textSize_2x"
+
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/titleResult"/>
+
+        <TextView
+            android:id="@+id/numCorrect"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:text="0"
+            android:textColor="@color/accent"
+            android:textAlignment="center"
+            android:textSize="@dimen/main_textSize_4x"
+
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/titleCorrect"/>
+
+        <TextView
+            android:id="@+id/titleIncorrect"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/main_margin_2x"
+
+            android:text="@string/game_result_lblIncorrectLabel"
+            android:textAlignment="center"
+            android:textSize="@dimen/main_textSize_2x"
+
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/numCorrect"/>
+
+        <TextView
+            android:id="@+id/numIncorrect"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:text="0"
+            android:textColor="@color/accent"
+            android:textAlignment="center"
+            android:textSize="@dimen/main_textSize_4x"
+
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/titleIncorrect"/>
+
+        <TextView
+            android:id="@+id/titlePoints"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/main_margin_2x"
+
+            android:text="@string/game_result_lblPointsLabel"
+            android:textAlignment="center"
+            android:textSize="@dimen/main_textSize_2x"
+
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/numIncorrect"/>
+
+        <TextView
+            android:id="@+id/points"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:text="0"
+            android:textColor="@color/accent"
+            android:textAlignment="center"
+            android:textSize="@dimen/main_textSize_4x"
+
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/titlePoints"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </FrameLayout>
