Result back to Dashboard

--- a/app/src/main/res/navigation/main_activity.xml
+++ b/app/src/main/res/navigation/main_activity.xml
@@ -68,7 +68,14 @@
         android:id="@+id/gameFragment"
         android:name="es.iessaladillo.pedrojoya.stroop.ui.game.GameFragment"
         android:label="fragment_game"
-        tools:layout="@layout/fragment_game" />
+        tools:layout="@layout/fragment_game" >
+        <action
+            android:id="@+id/action_result_to_dashboard"
+            app:destination="@id/resultFragment"
+            app:launchSingleTop="false"
+            app:popUpTo="@+id/dashboardFragment"
+            app:popUpToInclusive="false" />
+    </fragment>
     <fragment
         android:id="@+id/resultFragment"
         android:name="es.iessaladillo.pedrojoya.stroop.ui.result.ResultFragment"
